# magi-core

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  prd.json
.github/workflows/: ci.yml  release.yml
docs/: MAGI-System-Documentation.md  migration-v0.2.md  migration-v0.3.md  migration-v0.4.md  migration-v0.5.md  migration-v1.0.md
docs/adr/: 001-prompt-injection-threat-model.md  002-retry-on-schema-error.md  003-review-context-enrichment-is-consumer-concern.md  004-diff-grounded-finding-validation-is-consumer-concern.md  005-api-stability-1.0.md
examples/: basic_analysis.rs
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
planning/: claude-plan-tdd-org.md  claude-plan-tdd-v0.3-prompts.md  claude-plan-tdd-v2.md  claude-plan-tdd.md
planning/sections/: section-02-schema.md  section-03-validation.md  section-06-provider.md  section-08-orchestrator.md  section-09-claude-api.md  section-10-claude-cli.md  section-11-prelude.md  section-12-example.md
plans/: progress.md
sbtdd/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec-behavior-base.md  spec-behavior.md
sbtdd/reviews/: iteration-1-gemini.md  iteration-1-opus.md
sbtdd/sections/: index.md  section-01-errors.md  section-04-consensus.md  section-05-reporting.md  section-07-agents.md
sbtdd/sections/.prompts/: section-01-errors-prompt.md  section-02-schema-prompt.md  section-03-validation-prompt.md  section-04-consensus-prompt.md  section-05-reporting-prompt.md  section-06-provider-prompt.md  section-07-agents-prompt.md  section-08-orchestrator-prompt.md  section-09-claude-api-prompt.md  section-10-claude-cli-prompt.md  section-11-prelude-prompt.md  section-12-example-prompt.md
src/: agent.rs  consensus.rs  error.rs  finding_id.rs  lib.rs  orchestrator.rs  prelude.rs  provider.rs  reporting.rs  schema.rs  test_support.rs  user_prompt.rs  validate.rs
src/prompts/: balthasar.rs  caspar.rs  melchior.rs  mod.rs
src/prompts_md/: README.md  balthasar.md  balthasar_analysis.md  balthasar_code_review.md  balthasar_design.md  caspar.md  caspar_analysis.md  caspar_code_review.md  caspar_design.md  melchior.md  melchior_analysis.md  melchior_code_review.md  melchior_design.md
src/providers/: claude.rs  claude_cli.rs  mod.rs  openai_compat.rs
tests/fixtures/: _magi_ref.py  extract_magi_ref_prompts.py  gen_magi_ref_prompts.py  magi_ref_prompts.sha256  magi_report_v0_3_1.json
