[package]
name = "magi-core"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
authors = ["Julian Bolivar"]
description = "LLM-agnostic multi-perspective analysis system inspired by MAGI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BolivarTech/magi-core"
homepage = "https://github.com/BolivarTech/magi-core"
readme = "README.md"
keywords = ["llm", "multi-agent", "consensus", "analysis", "magi"]
categories = ["algorithms", "asynchronous"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "rt", "process", "io-util"] }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
claude-api = ["dep:reqwest"]
claude-cli = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serial_test = "3"

[[example]]
name = "basic_analysis"
